--- a/WebImmoApp/package.json
+++ b/WebImmoApp/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
